Fix tooltip bug, truncate componentName to use ellipsis (#78)
* Fix tooltip bug, truncate componentName to use ellipsis

* Fix canvas reset bug

* remove ellipsis CSS, truncated componentName and script URL

* remove unused css, fix URL overflow, set ellipsis to 128, remove ellipsis for URL

--- a/src/EventTooltip.css
+++ b/src/EventTooltip.css
@@ -23,20 +23,20 @@
   padding-top: 5px;
   grid-gap: 2px 5px;
   grid-template-columns: min-content auto;
-  word-break: break-word;
 }
 
 .DetailsGridLabel {
   color: #666;
   text-align: right;
-  white-space: nowrap;
 }
 
-.Duration {
+.DetailsGridURL{
+  overflow: hidden;
 }
 
 .ComponentName {
   font-weight: bold;
+  word-wrap: break-word;
 }
 
 .ComponentStack {
