--- a/src/CanvasPage.css
+++ b/src/CanvasPage.css
@@ -4,4 +4,5 @@
   bottom: 0.5rem;
   left: 0.5rem;
   right: 0.5rem;
+  overflow: hidden;
 }
